feat: implement full CRUD operations and dynamic filtering for patient management module